jdk1.8 init