@@ -3,6 +3,7 @@ package com.dji.sdk.cloudapi.property;
 import com.dji.sdk.cloudapi.device.PayloadIndex;
 import com.dji.sdk.common.BaseModel;
 import com.fasterxml.jackson.annotation.JsonValue;
+import com.google.common.collect.ImmutableMap;
 
 import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
@@ -35,7 +36,7 @@ public class ThermalIsothermLowerLimitSet extends BaseModel {
 
     @JsonValue
     public Map<String, Object> toMap() {
-        return Map.of(payloadIndex.toString(), Map.of("thermal_isotherm_upper_limit", thermalIsothermLowerLimit));
+        return ImmutableMap.of(payloadIndex.toString(), ImmutableMap.of("thermal_isotherm_upper_limit", thermalIsothermLowerLimit));
     }
 
     public PayloadIndex getPayloadIndex() {
