@@ -3,31 +3,30 @@ package com.dji.sdk.mqtt.state;
 import com.dji.sdk.cloudapi.device.*;
 import com.dji.sdk.cloudapi.livestream.DockLivestreamAbilityUpdate;
 import com.dji.sdk.exception.CloudSDKException;
+import com.google.common.collect.ImmutableSet;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Set;
 
 /**
- *
  * @author sean.zhou
- * @date 2021/11/18
  * @version 0.1
+ * @date 2021/11/18
  */
 public enum DockStateDataKeyEnum {
 
-    FIRMWARE_VERSION(Set.of("firmware_version"), DockFirmwareVersion.class),
+    FIRMWARE_VERSION(ImmutableSet.of("firmware_version"), DockFirmwareVersion.class),
 
-    LIVE_CAPACITY(Set.of("live_capacity"), DockLivestreamAbilityUpdate.class),
+    LIVE_CAPACITY(ImmutableSet.of("live_capacity"), DockLivestreamAbilityUpdate.class),
 
-    CONTROL_SOURCE(Set.of("control_source"), DockDroneControlSource.class),
+    CONTROL_SOURCE(ImmutableSet.of("control_source"), DockDroneControlSource.class),
 
-    LIVE_STATUS(Set.of("live_status"), DockLiveStatus.class),
+    LIVE_STATUS(ImmutableSet.of("live_status"), DockLiveStatus.class),
 
-    WPMZ_VERSION(Set.of("wpmz_version"), DockWpmzVersion.class),
+    WPMZ_VERSION(ImmutableSet.of("wpmz_version"), DockWpmzVersion.class),
 
-    PAYLOAD(PayloadModelEnum.getAllIndexWithPosition(), DockPayload.class)
-    ;
+    PAYLOAD(PayloadModelEnum.getAllIndexWithPosition(), DockPayload.class);
 
     private final Set<String> keys;
 
